# TorchFlowers

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEXT_STEPS.md  NOTICE  PROGRESS.md  README.md  TASKS.md  deny.toml  package-lock.json  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  release-lite-bot.yml  release.yml
bots/bedrock-engine/: Cargo.toml
bots/bedrock-engine/examples/: local_api_with_auth.rs  move_to_block.rs  multi_bot_supervisor.rs  place_block.rs
bots/bedrock-engine/src/: api.rs  config.rs  db.rs  diagnostics.rs  error.rs  lib.rs  main.rs  models.rs  validation.rs
bots/bedrock-engine/src/auth/: entitlement.rs  microsoft.rs  minecraft.rs  mod.rs  playfab.rs  token_manager.rs  xbox.rs  xsts.rs
bots/bedrock-engine/src/bedrock/: mod.rs  protocol_adapter.rs  session.rs  transport.rs
bots/bedrock-engine/src/bedrock/auth/: entitlement.rs  minecraft.rs  mod.rs  token_manager.rs  xbox.rs  xsts.rs
bots/bedrock-engine/src/bot/: supervisor.rs
bots/bedrock-engine/src/core/: mod.rs
bots/bedrock-engine/tests/: auth_contract.rs  protocol_adapter.rs  security.rs
crates/torchflower/: Cargo.toml  README.md
crates/torchflower-addon/: Cargo.toml  README.md
crates/torchflower-addon/src/: lib.rs
crates/torchflower-api/: Cargo.toml  README.md
crates/torchflower-api/src/: lib.rs
crates/torchflower-auth/: Cargo.toml  README.md
crates/torchflower-auth/src/: lib.rs
crates/torchflower-client/: Cargo.toml
crates/torchflower-client/src/: lib.rs
crates/torchflower-data/: Cargo.toml
crates/torchflower-data/src/: lib.rs
crates/torchflower-engine/: Cargo.toml  README.md
crates/torchflower-engine/.sqlx/: query-70010ae118c71848a37a41c5cc29d28f1bd1abb1bccba3fbd9f7939e6582c93b.json  query-b855c51986ee307bb21f29907005fb1a98441b505b9a1fad151556ff8c598510.json
crates/torchflower-engine/assets/: bedrock_1_21_70_steve.json
crates/torchflower-engine/examples/: break_and_pickup.rs  chat.rs  connect.rs  inspect_logs.rs  login.rs  ping_donut.rs
crates/torchflower-engine/src/: api.rs  config.rs  db.rs  diagnostics.rs  easy_auth.rs  error.rs  lib.rs  main.rs  native_client.rs  pool.rs  validation.rs
crates/torchflower-engine/src/bedrock/: local_network.rs  mod.rs  protocol_adapter.rs  session.rs  transport.rs
crates/torchflower-engine/src/bedrock/auth/: microsoft.rs  minecraft.rs  mod.rs
crates/torchflower-engine/src/bot/: supervisor.rs
crates/torchflower-engine/src/core/: mod.rs
crates/torchflower-engine/tests/: auth_contract.rs  protocol_adapter.rs  real_bds.rs
crates/torchflower-level/: Cargo.toml  README.md
crates/torchflower-level/src/: lib.rs
crates/torchflower-lite-bot/: Cargo.toml  README.md
crates/torchflower-lite-bot/src/: main.rs
crates/torchflower-net/: Cargo.toml  README.md
crates/torchflower-net/src/: adapter.rs  lib.rs  native.rs
crates/torchflower-net/src/client/: discovery.rs  handshake.rs  mod.rs
crates/torchflower-net/src/connection/: mod.rs
crates/torchflower-net/src/connection/controller/: window.rs
crates/torchflower-net/src/connection/queue/: mod.rs  recv.rs  send.rs
crates/torchflower-net/src/protocol/: ack.rs  frame.rs  mod.rs  reliability.rs
crates/torchflower-net/src/protocol/packet/: mod.rs  offline.rs
crates/torchflower-net/src/util/: mod.rs
crates/torchflower-net/tests/: fragment_queue.rs  frame_packet.rs  ordered_queue.rs
crates/torchflower-ping/: Cargo.toml
crates/torchflower-ping/src/: lib.rs
crates/torchflower-proto/: Cargo.toml  README.md
crates/torchflower-proto/benches/: packets.rs
crates/torchflower-proto/src/: lib.rs  protocol_version.rs
crates/torchflower-protocol/: Cargo.toml
crates/torchflower-protocol-core/: Cargo.toml
crates/torchflower-protocol-core/src/: lib.rs
crates/torchflower-protocol/src/: compat.rs  lib.rs
crates/torchflower-server/: Cargo.toml
crates/torchflower-server/src/: lib.rs
crates/torchflower/src/: lib.rs
database/: rustrock.sqlite
database/migrations/: 0001_initial.sql
docs/: LITE_BOT_INSTALL.md  api.md  architecture.md  async-audit.md  examples.md  protocol-compatibility.md  rak-rs-change-classification.md  rak-rs-vendor-diff.patch  security.md  testing.md  upstreaming-bedrock-rs.md
docs/upstream-patches/: motd-parse-hardening-pr-description.md  motd-parse-hardening.patch  raknet-client-stability-pr-description.md  raknet-client-stability.patch
examples/: quickstart.rs  stress_test.rs
scripts/: install-lite-bot.sh  login-and-save.ps1
server/: package.json
server/src/: index.ts
server/src/config/: env.ts
server/src/discord/: bot.ts  commands.ts  format.ts
server/src/services/: engineClient.ts
shared/: package.json
shared/src/: index.ts
