[workspace]
resolver = "3"
members = ["bots/bedrock-engine"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TorchFlower Contributors"]
license = "Apache-2.0"
description = "Rust libraries and tools for Minecraft Bedrock bot clients."
repository = "https://github.com/Osamu-GWAD/TorchFlower"
homepage = "https://github.com/Osamu-GWAD/TorchFlower"
documentation = "https://docs.rs/torchflower"
keywords = ["minecraft", "bedrock", "raknet", "bot", "client"]
categories = ["game-development", "network-programming"]
readme = "README.md"

[patch.crates-io]
rak-rs = { path = "vendor/rak-rs" }
