[package]
name = "torchflower-workspace"
version = "0.1.0"
edition = "2021"
authors = ["TorchFlower Contributors"]
license = "Apache-2.0"
description = "Workspace harness for TorchFlower examples."
repository = "https://github.com/Osamu-GWAD/TorchFlower"
homepage = "https://github.com/Osamu-GWAD/TorchFlower"
documentation = "https://docs.rs/torchflower"
keywords = ["minecraft", "bedrock", "raknet", "bot", "client"]
categories = ["game-development", "network-programming"]
readme = "README.md"
publish = false

[workspace]
resolver = "3"
members = [
    "crates/torchflower",
    "crates/torchflower-auth",
    "crates/torchflower-protocol-core",
    "crates/torchflower-protocol",
    "crates/torchflower-ping",
    "crates/torchflower-client",
    "crates/torchflower-server",
    "crates/torchflower-data",
    "crates/torchflower-proto",
    "crates/torchflower-net",
    "crates/torchflower-engine",
    "crates/torchflower-api",
    "crates/torchflower-level",
    "crates/torchflower-addon",
    "crates/torchflower-lite-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TorchFlower Contributors"]
license = "Apache-2.0"
description = "Rust libraries and tools for Minecraft Bedrock bot clients."
repository = "https://github.com/Osamu-GWAD/TorchFlower"
homepage = "https://github.com/Osamu-GWAD/TorchFlower"
documentation = "https://docs.rs/torchflower"
keywords = ["minecraft", "bedrock", "raknet", "bot", "client"]
categories = ["game-development", "network-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "time"] }
torchflower = { version = "0.1.0", path = "crates/torchflower", features = ["offline-mode"] }
