[package]
name = "torchflower-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Authenticated REST API server wrapper for TorchFlower engine sessions."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/torchflower-api"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
anyhow = "1.0"
torchflower-engine = { path = "../torchflower-engine" }
