[package]
name = "torchflower-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage-agnostic Microsoft, Xbox, PlayFab, entitlement, and Bedrock JWT authentication APIs."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/torchflower-auth"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["sync", "rt"] }

[features]
default = []
offline-mode = []
