[package]
name = "torchflower-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minecraft Bedrock static data, item and block registries for TorchFlower."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/torchflower-data"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
