[package]
name = "torchflower-engine"
version = "0.1.0"
edition = "2021"
authors = ["TorchFlower Contributors"]
license = "Apache-2.0"
description = "Bot session engine, persistence, validation, and gameplay control for TorchFlower."
repository = "https://github.com/Osamu-GWAD/TorchFlower"
homepage = "https://github.com/Osamu-GWAD/TorchFlower"
documentation = "https://docs.rs/torchflower-engine"
keywords = ["minecraft", "bedrock", "raknet", "bot", "client"]
categories = ["game-development", "network-programming"]
readme = "../../README.md"
publish = false

[lib]
name = "torchflower_engine"
path = "src/lib.rs"

[[bin]]
name = "torchflower-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
aes = "0.9.0-rc.4"
bedrock = { git = "https://github.com/bedrock-crustaceans/bedrock-rs.git", rev = "c44d5f51a9036a04cc8661f4be02e2cff40c6ab1", default-features = false, features = ["auth", "auth-async", "protocol", "protocol-v898", "protocol-v944", "protocol-v975", "protocol-unknown", "protocol-packet-dyn", "protocol-packet-meta"] }
bedrock_protocol_core = { git = "https://github.com/bedrock-crustaceans/bedrock-rs.git", rev = "c44d5f51a9036a04cc8661f4be02e2cff40c6ab1" }
binary-util = "0.3.4"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-queue = "0.3"
ctr = "0.10.0-rc.4"
dotenvy = "0.15"
flate2 = "1.1"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
p384 = { version = "0.14.0-rc.8", features = ["ecdh", "ecdsa", "pkcs8", "pem"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand = "0.9"
num_cpus = "1"
snap = "1.1"
torchflower-net = { path = "../torchflower-net" }
torchflower-auth = { path = "../torchflower-auth" }
torchflower-proto = { path = "../torchflower-proto" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
console-subscriber = { version = "0.4", optional = true }

[features]
default = []
console = ["console-subscriber"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
