[package]
name = "torchflower-level"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minecraft Bedrock world folder and LevelDB key utilities for TorchFlower."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/torchflower-level"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
