[package]
name = "torchflower-lite-bot"
version = "0.1.0"
edition = "2021"
authors = ["TorchFlower Contributors"]
license = "Apache-2.0"
description = "Extremely lightweight Bedrock AFK bot runtime for TorchFlower."
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.50", features = ["rt", "macros", "time", "net", "sync"] }
torchflower-engine = { version = "0.1.0", path = "../torchflower-engine", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.9"
