[package]
name = "torchflower-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bedrock packet types, protocol version abstraction, compression, and encryption helpers for TorchFlower."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/torchflower-proto"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
bytes = "1.8"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "packets"
harness = false
