[package]
name = "torchflower-protocol-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Primitive Bedrock and RakNet protocol types, VarInt/ZigZag codecs, vectors, and metadata."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/torchflower-protocol-core"
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes = "1.8"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
