[package]
name = "torchflower-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native Bedrock protocol packet definitions, registry, dynamic JSON and batch support."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/torchflower-protocol"
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
torchflower-protocol-core = { version = "0.1.0", path = "../torchflower-protocol-core" }
flate2 = "1.0"
zstd = { version = "0.13", features = ["zstdmt"] }
